<resources>
    <string name="app_name">MOKI</string>

    <string name="char_sel">Character Select</string>
    <string name="kd_sel">Knockdown Select</string>
    <string name="oki_sel">Oki Move Select</string>
    <string name="load_title">Load Oki Setup</string>

    <string name="sort_title">Sort Order</string>

    <!-- Timeline -->

    <string name="timeline_temp_dots">&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n&#xb7;\n</string>
    <string name="timeline_temp_tens">0\n.\n.\n.\n.\n.\n.\n.\n.\n1\n.\n.\n.\n.\n.\n.\n.\n.\n.\n2\n.\n.\n.\n.\n.\n.\n.\n.\n.\n3\n.\n.\n.\n.\n.\n.\n.\n.\n.\n4\n.\n.\n.\n.\n.\n.\n.\n.\n.\n5\n.\n.\n.\n.\n.\n.\n.\n.\n.\n6\n.\n.\n.\n.\n.\n.\n.\n.\n.\n7\n.\n.\n.\n.\n.\n.\n.\n.\n.\n8\n.\n.\n.\n.\n.\n.\n.\n.\n.\n9\n.\n.\n.\n.\n.\n.\n.\n.\n.\n10\n.\n.\n.\n.\n.\n.\n.\n.\n.\n11\n.\n.\n.\n.\n.\n.\n.\n.\n.\n12</string>
    <string name="timeline_temp_ones">1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n0</string>

    <string name="timeline_header_kd">K\nD</string>
    <string name="timeline_header_kdr">K\nD\nR</string>
    <string name="timeline_header_kdbr">K\nD\nB\nR</string>
      <!-- TODO: Append numbers in code if you want to reduce number of resources -->
    <string name="timeline_header_oki1">O\nK\nI\n#1</string>
    <string name="timeline_header_oki2">O\nK\nI\n#2</string>
    <string name="timeline_header_oki3">O\nK\nI\n#3</string>
    <string name="timeline_header_oki4">O\nK\nI\n#4</string>
    <string name="timeline_header_oki5">O\nK\nI\n#5</string>
    <string name="timeline_header_oki6">O\nK\nI\n#6</string>
    <string name="timeline_header_oki7">O\nK\nI\n#7</string>
    <string name="timeline_frame_symbol">&#xb7;</string>
    <string name="temp_string">TEMP</string>

    <string name="drawer_open">Open the Navigation Drawer</string>
    <string name="drawer_close">Close the Navigation Drawer</string>
    <string name="warning_no_char">Character must be selected to view Timeline.</string>
    <string name="warning_no_kd">Knockdown must be selected to view Timeline.</string>

    <string name="currentoki_title">Current Oki Setup</string>
    <string name="currentoki_kd_label">KD: </string>
    <string name="currentoki_oki1_label">1: </string>
    <string name="currentoki_oki2_label">2: </string>
    <string name="currentoki_oki3_label">3: </string>
    <string name="currentoki_oki4_label">4: </string>
    <string name="currentoki_oki5_label">5: </string>
    <string name="currentoki_oki6_label">6: </string>
    <string name="currentoki_oki7_label">7: </string>

    <!-- Load Data Activity -->
    <string name="load_char_spinner_label">Show Oki Setups for:</string>
    <string name="setup_deleted">Oki Setup deleted.</string>
    <string name="undo_deletion">UNDO</string>
    <string name="timeline_clear_all">Clear All Oki Slots</string>
    <string name="timeline_clear_selected">Clear Selected Oki Slot</string>
    <string name="currentoki_fk_title">Frame Kill</string>
    <string name="currentoki_fk_kdr">KDR:</string>
    <string name="currentoki_fk_kdbr">KDBR:</string>
    <string name="currentoki_fk_kd">KD:</string>
    <string name="oms_toggle_detailed_list">Toggle Detailed List</string>
    <string name="oki_sort_def">Default</string>
    <string name="oki_sort_move">Move Name</string>
    <string name="oki_sort_startup">Startup</string>
    <string name="oki_sort_total">Total</string>
    <string name="kd_sort_kda">KDA</string>
    <string name="kd_sort_kdra">KDRA</string>
    <string name="kd_sort_kdbra">KDBRA</string>
    <string name="sorting_by">Sorting by:</string>
    <string name="setup_info_drawer_button">Current Setup Info Drawer</string>
</resources>
