<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_currentoki_drawer"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/bgTableOKI">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_currentoki_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/tv_currentoki_title"
            style="@style/CurrentOki.Title"
            android:background="@color/bgTableKDA"
            android:text="@string/currentoki_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_currentkd_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_kd_label"
            app:layout_constraintEnd_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_currentoki_title" />

        <TextView
            android:id="@+id/tv_oki1_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki1_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_currentkd_label" />

        <TextView
            android:id="@+id/tv_oki2_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki2_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki1_label" />

        <TextView
            android:id="@+id/tv_oki3_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki3_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki2_label" />

        <TextView
            android:id="@+id/tv_oki4_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki4_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki3_label" />

        <TextView
            android:id="@+id/tv_oki5_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki5_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki4_label" />

        <TextView
            android:id="@+id/tv_oki6_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki6_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki5_label" />

        <TextView
            android:id="@+id/tv_oki7_label"
            style="@style/CurrentOki.Label"
            android:text="@string/currentoki_oki7_label"
            app:layout_constraintEnd_toStartOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_oki6_label" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_currentoki_label_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <TextView
            android:id="@+id/tv_kd_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_currentkd_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki1_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki1_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki2_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki2_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki3_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki3_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki4_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki4_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki5_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki5_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki6_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki6_label"
            tools:text="Oki Info" />

        <TextView
            android:id="@+id/tv_oki7_item"
            style="@style/CurrentOki.Item"
            app:layout_constraintStart_toEndOf="@id/gl_currentoki_label_guideline"
            app:layout_constraintTop_toTopOf="@id/tv_oki7_label"
            tools:text="Oki Info" />

        <Space
            android:id="@+id/currentoki_space"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_oki7_label" />

        <View
            android:id="@+id/currentoki_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divider"
            app:layout_constraintTop_toBottomOf="@id/currentoki_space"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/currentoki_fk_title"
            style="@style/CurrentOki.FrameKill.Title"
            app:layout_constraintEnd_toEndOf="@id/tv_currentkd_label"
            app:layout_constraintTop_toBottomOf="@id/currentoki_divider"
            android:text="@string/currentoki_fk_title"
            />

        <TextView
            android:id="@+id/currentoki_fk_kdr"
            style="@style/CurrentOki.FrameKill"
            app:layout_constraintTop_toBottomOf="@id/currentoki_fk_title"
            android:text="@string/currentoki_fk_kdr"
            app:layout_constraintEnd_toEndOf="@+id/currentoki_fk_kdbr" />

        <TextView
            android:id="@+id/currentoki_fk_kdbr"
            style="@style/CurrentOki.FrameKill"
            app:layout_constraintTop_toBottomOf="@id/currentoki_fk_kdr"
            android:layout_marginTop="8dp"
            android:text="@string/currentoki_fk_kdbr"
            app:layout_constraintStart_toStartOf="@+id/tv_currentkd_label" />

        <TextView
            android:id="@+id/currentoki_fk_kd"
            style="@style/CurrentOki.FrameKill"
            app:layout_constraintTop_toBottomOf="@id/currentoki_fk_kdbr"
            android:layout_marginTop="8dp"
            android:text="@string/currentoki_fk_kd"
            app:layout_constraintEnd_toEndOf="@+id/currentoki_fk_kdbr"/>

        <TextView
            android:id="@+id/tv_fk_kdr"
            style="@style/CurrentOki.FrameKill.Item"
            app:layout_constraintTop_toTopOf="@id/currentoki_fk_kdr"
            app:layout_constraintStart_toEndOf="@id/currentoki_fk_kdr"
            tools:text="19"
            />

        <TextView
            android:id="@+id/tv_fk_kdbr"
            style="@style/CurrentOki.FrameKill.Item"
            app:layout_constraintTop_toTopOf="@id/currentoki_fk_kdbr"
            app:layout_constraintStart_toEndOf="@id/currentoki_fk_kdbr"
            tools:text="24"
            />

        <TextView
            android:id="@+id/tv_fk_kd"
            style="@style/CurrentOki.FrameKill.Item"
            app:layout_constraintTop_toTopOf="@id/currentoki_fk_kd"
            app:layout_constraintStart_toEndOf="@id/currentoki_fk_kd"
            tools:text="86"
            />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
